--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,9 @@ name: Pull request workflow
 
 on:
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - main
+      - master
   workflow_dispatch:
 
 jobs:
