--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -2,7 +2,9 @@ name: Release Candidate
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - main
+      - master
   workflow_dispatch:
 
 jobs:
