--- a/app/build-scripts.gradle
+++ b/app/build-scripts.gradle
@@ -1,8 +1,3 @@
-ext {
-    app_version_name = "1.0"
-    git_hash = this.&getGitHash
-}
-
 def getGitHash = { ->
     def stdout = new ByteArrayOutputStream()
     exec {
@@ -12,6 +7,11 @@ def getGitHash = { ->
     return stdout.toString().trim()
 }
 
-task fileName(group: "publishing") {
+ext {
+    app_version_name = "1.0"
+    git_hash = getGitHash()
+}
+
+task fileName {
     println(app_version_name + "-" + getGitHash())
 }
