--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: Release
 
 on:
-  create:
+  push:
+    branches:
+      - "!*"
     tags:
-      - v*
+      - "v*"
   workflow_dispatch:
 
 jobs:
